Fixing z-index

--- a/src/components/StopWatch/styles.css
+++ b/src/components/StopWatch/styles.css
@@ -5,6 +5,9 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+
+    position: relative;
+    z-index: 5000;
 }
 
 p {  
